# vinted-logger-rs

./: Cargo.toml  README.md
examples/: console.rs  console_json.rs  udp_json.rs
src/: lib.rs  main.rs  vinted_json_formatter.rs  vinted_udp_logger.rs  vinted_udp_writer.rs
src/vinted_udp_logger/: visitor.rs
