[package]
name = "vinted-logger"
version = "0.2.0"
authors = ["Evaldas Buinauskas <evaldas.buinauskas@vinted.com>"]
edition = "2018"
description = "Vinted fluentd UDP logger for Rust applications"
readme = "README.md"
license = "MIT"
documentation = "https://github.com/vinted/vinted-logger-rs"
homepage = "https://github.com/vinted/vinted-logger-rs"
repository = "https://github.com/vinted/vinted-logger-rs"

[dependencies]
log = "0.4"
anyhow = "1.0"
gethostname = "0.2"
serde_json = "1"
tracing = "*"
tracing-subscriber = "*"
bytes = "1"
hostname = "0.3"
futures-channel = "0.3"
futures-util = { version = "0.3", features = ["sink"] }
tokio = { version = "1", features = ["io-util", "net", "time"] }
tokio-util = { version = "0.6", features = ["codec", "net"] }
tracing-core = "0.1"


[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.log4rs]
version = "1.0.0"
default-features = false
features = ["config_parsing", "json_encoder", "yaml_format", "console_appender"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
