[package]
name = "vinted-logger"
version = "0.3.0"
authors = [
    "Evaldas Buinauskas <evaldas.buinauskas@vinted.com>",
    "Martynas Jakimcikas <martynas.jakimcikas@vinted.com>",
]
edition = "2018"
description = "Vinted fluentd UDP logger for Rust applications"
readme = "README.md"
license = "MIT"
documentation = "https://github.com/vinted/vinted-logger-rs"
homepage = "https://github.com/vinted/vinted-logger-rs"
repository = "https://github.com/vinted/vinted-logger-rs"

[dependencies]
bytes = "1"
futures-channel = "0.3"
futures-util = { version = "0.3", features = ["sink"] }
gethostname = "0.2"
serde_json = "1"
serde = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec", "net"] }
tracing-subscriber = "0.2"
tracing-core = "0.1"
tracing-serde = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
