[package]
name = "vinted-logger"
version = "0.3.1"
authors = [
    "Evaldas Buinauskas <evaldas.buinauskas@vinted.com>",
    "Martynas Jakimcikas <martynas.jakimcikas@vinted.com>",
]
edition = "2018"
description = "Vinted fluentd UDP logger for Rust applications"
readme = "README.md"
license = "MIT"
documentation = "https://github.com/vinted/vinted-logger-rs"
homepage = "https://github.com/vinted/vinted-logger-rs"
repository = "https://github.com/vinted/vinted-logger-rs"

[dependencies]
bytes = "1"
gethostname = "0.2"
parking_lot = "0.12"
serde_json = "1"
serde = "1"
tracing-subscriber = "0.2"
tracing-core = "0.1"
tracing-serde = "0.1"

[dev-dependencies]
tracing = "0.1"
